--- a/client/src/components/ButtonDelete.css
+++ b/client/src/components/ButtonDelete.css
@@ -1,11 +1,11 @@
 .button-delete {
-  width: 150px;
-  height: 50px;
+  min-width: 150px;
+  height: 48px;
   cursor: pointer;
   display: flex;
   align-items: center;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
   background: #e62222;
 }
@@ -16,7 +16,7 @@
 }
 
 .button-delete .text {
-  transform: translateX(35px);
+  transform: translateX(30px);
   color: white;
   font-weight: bold;
 }
@@ -24,7 +24,7 @@
 .button-delete .icon {
   position: absolute;
   border-left: 1px solid #ffffff;
-  transform: translateX(110px);
+  transform: translateX(100px);
   height: 40px;
   width: 40px;
   display: flex;
@@ -48,7 +48,7 @@
 .button-delete:hover .icon {
   width: 150px;
   border-left: none;
-  transform: translateX(0);
+  transform: translateX(-6px);
 }
 
 .button-delete:focus {
